--- a/dom/ejerciciosPracticosDOM/formulario_narrador/estilos.css
+++ b/dom/ejerciciosPracticosDOM/formulario_narrador/estilos.css
@@ -14,10 +14,11 @@
 }
 
 /*a todos los hijos directos*/
+/*.contact-form > *   */
 .contact-form > *{
 	display: block;	
 	width: 100%;
-	margin: 1rem auto;
+	margin: 0 auto;
 	padding: .5rem;
 }
 
@@ -57,7 +58,6 @@
 }
 /*para los errores que mostraremos cuando no cumplan con la validacion*/
 .contact-form-error{
-	margin-top: 1rem;
 	font-size: 80%;
 	background-color: var(--form-error-color);
 	color: #fff;
@@ -83,8 +83,6 @@
 		visibility: visible;
 	}
 }
-
-
 
 
 
